[project]
name = "openbgpmonitor"
version = "0.1.0"
description = "This project aims to provide a simple way to monitor BGP announces over time"
authors = [
    {name = "Julien cuvelier",email = "juliencuvelier@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pybird (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
