[project]
name = "openbgpmonitor"
version = "0.1.0"
description = "This project aims to provide a simple way to monitor BGP announces over time"
authors = [
    {name = "Julien cuvelier",email = "juliencuvelier@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pybird (>=1.2.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "influxdb-client (>=1.49.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pre-commit = "^4.3.0"

